--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,59 @@
-# Vite Backend API Configuration
-# 
-# Set the base URL for all backend API calls.
-# This is the ONLY place where the backend URL should be configured.
-# All API modules will automatically use this URL.
+# ============================================================================
+# CRITICAL: Backend API Configuration for Celebration Point Frontend
+# ============================================================================
+# This is the SINGLE MOST IMPORTANT configuration for production connectivity.
+# All API calls will use this URL.
 #
-# EXAMPLES:
-# - Development (local): http://localhost:8080
-# - Production (Railway): https://celebrationpoint-backend-prod.up.railway.app
-# - Production (other): https://api.celebrationpoint.com
-#
-# Leave empty or commented out to use default (http://localhost:8080)
+# DO NOT USE RELATIVE PATHS OR LOCALHOST IN PRODUCTION
+# DO NOT HARDCODE URLS IN CODE
+# ============================================================================
 
+# Production Backend URL (MUST MATCH YOUR BACKEND DEPLOYMENT)
+# Examples:
+#   - Railway: https://celebrationpoint-backend-production.up.railway.app
+#   - Custom Domain: https://api.celebrationpoint.com
+#   - Local Dev: http://localhost:8080
 VITE_API_BASE_URL=https://celebrationpoint-backend-production.up.railway.app
 
-# For Railway deployment, uncomment and update:
-# VITE_API_BASE_URL=https://celebrationpoint-backend-prod.up.railway.app
-
-# For other production deployment:
-# VITE_API_BASE_URL=https://your-backend-url.com
+# ============================================================================
+# NETLIFY DEPLOYMENT INSTRUCTIONS:
+# ============================================================================
+# 1. Go to: Netlify Dashboard > Your Site > Build & Deploy > Environment
+# 2. Add this variable:
+#    Key: VITE_API_BASE_URL
+#    Value: https://celebrationpoint-backend-production.up.railway.app
+# 3. Redeploy your site
+# 4. Open browser console and verify:
+#    - See "[API CONFIG] ✅ Using API Base URL: https://..."
+#    - See "[AXIOS] ✅ Axios instance created successfully"
+#
+# ============================================================================
+# LOCAL DEVELOPMENT INSTRUCTIONS:
+# ============================================================================
+# 1. Create .env.local (NOT .env.example)
+# 2. Set: VITE_API_BASE_URL=http://localhost:8080
+# 3. Run: npm run dev
+# 4. Check console for configuration logs
+#
+# ============================================================================
+# TROUBLESHOOTING:
+# ============================================================================
+# If data is not loading in production:
+#
+# 1. Check Netlify environment variables are set
+# 2. Open browser DevTools > Console
+# 3. Look for logs starting with [API CONFIG] and [AXIOS]
+# 4. Verify the URL shown matches your backend
+# 5. Check CORS headers on backend
+#
+# Expected console output in production:
+#   [API CONFIG] 🔧 Vite Environment Variables: {
+#     VITE_API_BASE_URL: "https://celebrationpoint-backend-production.up.railway.app",
+#     DEV: false,
+#     PROD: true,
+#     SSR: false
+#   }
+#   [API CONFIG] ✅ Using API Base URL: https://celebrationpoint-backend-production.up.railway.app
+#   [AXIOS] 🔧 Creating axios instance with baseURL: https://celebrationpoint-backend-production.up.railway.app
+#   [AXIOS] ✅ Axios instance created successfully
+# ============================================================================
